# ChangeLog for genkernel
# Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
# Distributed under the GPL v2

  13 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh:
  Add -L line into LIB= in Makefile

  13 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh:
  Unpack fuse source and modify CFLAGS for unionfs-fuse

  12 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh,
  genkernel.conf:
  Unpack unionfs-fuse with -j

  12 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_determineargs.sh:
  Call arch_replace and cache_replace on fuse/unionfs-fuse vars

  12 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> genkernel.conf:
  Add fuse/unionfs-fuse blocks to genkernel.conf

  12 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> genkernel:
  Actually call compile_fuse() and compile_unionfs_fuse()

  12 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/initrd.scripts,
  defaults/linuxrc:
  Add back (modified) unionfs code in linuxrc

  12 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Add append_fuse() and append_unionfs_fuse() functions

  12 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh:
  Add compile_fuse() and compile_unionfs_fuse()

  04 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> arch/alpha/busy-config,
  arch/ia64/busy-config, arch/mips/busy-config, arch/parisc/busy-config,
  arch/parisc64/busy-config, arch/ppc/busy-config, arch/ppc64/busy-config,
  arch/sparc/busy-config, arch/sparc64/busy-config, arch/um/busy-config,
  arch/x86/busy-config, arch/x86_64/busy-config, defaults/busy-config:
  Enabling CONFIG_WGET and CONFIG_FEATURE_TAR_BZIP2 for initial support of
  gentoo bug 211976

  31 Oct 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> genkernel:
  Tagging a 3.4.10.901 release, for testing. Adding periods to ChangeLog to
  fix syntax hilighting.

  15 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> AUTHORS:
  Adding Andrew and Robin to AUTHORS.
