@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
 # Distributed under the GPL v2
 
+  13 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh,
+  gen_initramfs.sh:
+  Correct unionfs-fuse bincache path and clean up debugging code
+
   13 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh:
   Add -L line into LIB= in Makefile
 
